cabal-version: 1.12


name:           MazeGen
version:        0.0.0
build-type:     Simple

library
  exposed-modules:
      Algorithm.Backtracker
      Algorithm.Ellers
      Algorithm.GrowingTree
      Algorithm.HuntKill
      Algorithm.Kruskals
      Algorithm.Prims
      Algorithm.Sidewinder
      ParseConfig
      Solver
      Utils
  other-modules:
      Paths_MazeGen
  hs-source-dirs:
      src
  build-depends:
      QuickCheck
    , aeson
    , array
    , base >=4.7 && <5
    , bytestring
    , containers
    , disjoint-set
    , gloss
    , random
    , safe
    , text
    , time
  default-language: Haskell2010

executable MazeGen-exe
  main-is: Main.hs
  other-modules:
      Paths_MazeGen
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      MazeGen
    , QuickCheck
    , aeson
    , array
    , base >=4.7 && <5
    , bytestring
    , containers
    , disjoint-set
    , gloss
    , random
    , safe
    , text
    , time
  default-language: Haskell2010
